banner text spacing corrected and added relevant text

--- a/frontend/styles/hero.css
+++ b/frontend/styles/hero.css
@@ -115,7 +115,7 @@ banner
 #banner{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     text-align: center;
     background-image: url("../assets/images/banner.png");
@@ -157,7 +157,7 @@ small banners
 #sm-banner .banner-box{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-start;
     background-image: url("../assets/images/b17.jpg");
     min-width: 48%;
@@ -206,18 +206,28 @@ banner3
 }
 
 #banner3 .banner-box{
+    text-align: end;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-start;
     background-image: url("../assets/images/b7.jpg");
     min-width: 30%;
     height: 30vh;
     background-size: cover;
     background-position: center;
-    padding: 20px;
+    padding: 20px 20px 0px 20px; 
     margin-bottom: 20px;
 }
+#banner3 .banner-box h2,
+#banner3 .banner-box h4 {
+    margin: 0;
+    line-height: 1.1;
+}
+#banner3 .banner-box h4 {
+    margin-top: 2px;
+}
+
 
 #banner3 .banner-box2{
     background-image: url("../assets/images/b4.jpg");
@@ -231,6 +241,7 @@ banner3
     color: var(--white);
     font-weight: 900;
     font-size: 22px;
+    
 }
 
 #banner3 h3{
